Actulizacion de bootstrap y traducion

--- a/404.html
+++ b/404.html
@@ -2,29 +2,30 @@
 <html class="no-js" lang="en">
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:26 GMT -->
+<!-- copia desde demos.codexcoder.com/themeforest/html/casina/casina/404.html por HTTrack Website Copier/3.x [XR&CO'2014], lunes, 03 de febrero de 2025 19:33:26 GMT -->
+
 <head>
 	<meta charset="utf-8">
 	<title>Casina 404</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- site favicon -->
+	<!-- sitios favicon -->
 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
 	<!-- Place favicon.ico in the root directory -->
 
-	<!-- All stylesheet and icons css  -->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<!-- todos los stylesheet y iconos css  -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="assets/css/icofont.min.css">
 	<link rel="stylesheet" href="assets/css/swiper.min.css">
 	<link rel="stylesheet" href="assets/css/lightcase.css">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.min.css">
 
 </head>
 
 <body>
-	<!-- preloader start here -->
+	<!-- el preloader inicia aquí -->
     <div class="preloader">
         <div class="preloader-inner">
             <div class="preloader-icon">
@@ -33,22 +34,22 @@
             </div>
         </div>
     </div>
-	<!-- preloader ending here -->
+	<!-- elpreloader termina aquí -->
 
-	<!-- scrollToTop start here -->
+	<!-- el scrollToTop comienza aquí -->
     <a href="#" class="scrollToTop"><i class="icofont-rounded-up"></i></a>
-    <!-- scrollToTop ending here -->
+    <!-- el scrollToTop termina aquí -->
 
-	<!-- ==========shape image Starts Here========== -->
+	<!-- ========== Aquí inicia la imagen con forma ========== -->
 	<div class="body-shape">
 		<img src="assets/images/shape/body-shape.png" alt="shape">
 	</div>
-	<!-- ==========shape image end Here========== -->
+	<!-- ========== Aquí termina la imagen con forma ========== -->
 
 
 
 
-	<!-- ==========Header Section Starts Here========== -->
+	<!-- ==========Aquí inicia la sección de encabezado========== -->
 	<header class="header-section">
 		<div class="container">
 			<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
@@ -67,7 +68,7 @@
 									<i class="icofont-ui-call"></i> <span>+800-123-4567 6587</span>
 								</li>
 								<li>
-									<i class="icofont-location-pin"></i> Beverley, New York 224 USA
+									<i class="icofont-location-pin"></i> Beverley, Nueva York 224 USA
 								</li>
 							</ul>
 							<ul class="social-icons d-flex align-items-center">
@@ -97,26 +98,26 @@
 							<div class="menu-area">
 								<ul class="menu">
 									<li>
-										<a href="#0">Home</a>
+										<a href="#0">Inicio</a>
 										<ul class="submenu">
-											<li><a href="index-2.html">Home  Page One</a></li>
-											<li><a href="index-3.html">Home Page Two</a></li>
+											<li><a href="index-2.html">Casa Pagina 1</a></li>
+											<li><a href="index-3.html">Casa Pagina 2</a></li>
 										</ul>
 									</li>
 
 									<li>
-										<a href="#0">Features</a>
+										<a href="#0">Caracteristicas</a>
 										<ul class="submenu">
-											<li><a href="about.html">About</a></li>
+											<li><a href="about.html">Acerde de</a></li>
 											<li><a href="jaqpot.html">Casino Jackpot</a></li>
 											<li>
-												<a href="#0">games</a>
+												<a href="#0">Juegos</a>
 												<ul class="submenu">
-													<li><a href="game-list.html">game list 1</a></li>
-													<li><a href="game-list2.html">game list 2</a></li>
+													<li><a href="game-list.html">Lista de Juegos 1</a></li>
+													<li><a href="game-list2.html">Lista de Juegos 2</a></li>
 												</ul>
 											</li>
-											<li><a href="partners.html">partners</a></li>
+											<li><a href="partners.html">Socios</a></li>
 											<li><a href="pricing-plan.html">Pricing Plan</a></li>
 											
 											<li>
@@ -152,7 +153,7 @@
 								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
 								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
 
-								<!-- toggle icons -->
+								<!-- inconos de alternancia -->
 								<div class="header-bar d-lg-none">
 									<span></span>
 									<span></span>
@@ -169,11 +170,10 @@
 		</div>
 
 	</header>
-	<!-- ==========Header Section Ends Here========== -->
+	<!-- ==========Fin de la sección de encabezado========== -->
 
 
-
-	<!-- ===========PageHeader Section Start Here========== -->
+	<!-- ===========Inicio de la sección de encabezado de página========== -->
 	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/bg.jpg);">
 		<div class="container">
 			<div class="section-wrapper text-center text-uppercase">
@@ -187,10 +187,10 @@
 			</div>
 		</div>
 	</section>
-	<!-- ===========PageHeader Section Ends Here========== -->
+	<!-- ===========Fin de la sección de encabezado de página========== -->
 
 
-	<!-- ===========404 Section start Here========== -->
+	<!-- ===========Inicio de la sección 404========== -->
 	<section class="fore-zero padding-top padding-bottom">
 		<div class="container">
 			<div class="section-wrapper">
@@ -207,10 +207,10 @@
 			</div>
 		</div>
   </section>
-	<!-- ===========404 Section Ends Here========== -->
+	<!-- ===========Fin de la sección 404========== -->
 
 
-	<!-- ================ footer Section start Here =============== -->
+	<!-- ================Inicio de la sección de pie de página =============== -->
 	<footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
         <div class="footer-top">
             <div class="container">
@@ -375,7 +375,7 @@
             </div>
         </div>
     </footer>
-  	<!-- ================ footer Section end Here =============== -->
+  	<!-- ================Fin de la sección de pie de página =============== -->
 
 
 
@@ -383,8 +383,8 @@
 
 
 
-	<!-- All Needed JS -->
-	<script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
+	<!-- Todos los JS necesarios -->
+	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
 	<script src="assets/js/isotope.pkgd.min.js"></script>
@@ -392,12 +392,12 @@
 	<script src="assets/js/lightcase.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/main.js"></script>
 
 
-	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+	<!-- Google Analytics: cambia UA-XXXXX-Y por el ID de tu sitio. -->
 	<script>
 		window.ga = function () {
 			ga.q.push(arguments)
@@ -416,5 +416,5 @@
 </body>
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:26 GMT -->
+<!-- copia desde demos.codexcoder.com/themeforest/html/casina/casina/404.html por HTTrack Website Copier/3.x [XR&CO'2014], lunes, 03 de febrero de 2025 19:33:26 GMT -->
 </html>
