--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html class="no-js" lang="en">
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:32:28 GMT -->
+<!-- Copia de demos.codexcoder.com/themeforest/html/casina/casina/ por HTTrack Website Copier/3.x [XR&CO'2014], Lun, 03 Feb 2025 19:32:28 GMT -->
 <head>
 	<meta charset="utf-8">
 	<title>Casina</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- site favicon -->
+	<!-- sitio favicon -->
 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
-	<!-- Place favicon.ico in the root directory -->
+	<!-- Coloca favicon.ico en el directorio raíz -->
 
-	<!-- All stylesheet and icons css  -->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<!-- Todos los estilos y CSS de iconos -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="assets/css/icofont.min.css">
 	<link rel="stylesheet" href="assets/css/swiper.min.css">
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-	<!-- preloader start here -->
+	<!-- El preloader comienza aquí -->
     <div class="preloader">
         <div class="preloader-inner">
             <div class="preloader-icon">
@@ -33,22 +33,22 @@
             </div>
         </div>
     </div>
-	<!-- preloader ending here -->
+	<!-- Fin del preloader -->
 
-	<!-- scrollToTop start here -->
+	<!-- El scrollToTop comienza aquí -->
     <a href="#" class="scrollToTop"><i class="icofont-rounded-up"></i></a>
-    <!-- scrollToTop ending here -->
+    <!-- Fin del scrollToTop -->
 
-	<!-- ==========shape image Starts Here========== -->
+	<!-- ==========La imagen con forma comienza aquí========== -->
 	<div class="body-shape">
 		<img src="assets/images/shape/body-shape.png" alt="shape">
 	</div>
-	<!-- ==========shape image end Here========== -->
+	<!-- ==========Fin de la imagen con forma ========== -->
 
 
 
 
-	<!-- ==========Header Section Starts Here========== -->
+	<!-- ==========La sección de encabezado comienza aquí========== -->
 	<header class="header-section">
 		<div class="container">
 			<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
@@ -151,7 +151,7 @@
 								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
 								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
 
-								<!-- toggle icons -->
+								<!-- iconos de alternar -->
 								<div class="header-bar d-lg-none">
 									<span></span>
 									<span></span>
@@ -168,11 +168,11 @@
 		</div>
 
 	</header>
-	<!-- ==========Header Section Ends Here========== -->
+	<!-- ==========La sección de encabezado termina aquí========== -->
 
 
 
-	<!-- ===========Banner Section start Here========== -->
+	<!-- ===========La sección del banner comienza aquí========== -->
 	<section class="banner" style="background-image: url(assets/images/banner/bg.jpg);">
 		<div class="container">
 			<div class="row g-0">
@@ -188,10 +188,10 @@
 			</div>
 		</div>
 	</section>
-	<!-- ===========Banner Section Ends Here========== -->
+	<!-- ===========La sección del banner termina aquí========== -->
 
 
-	<!-- ===========counter Section Ends Here========== -->
+	<!-- ===========La sección del contador empieza aquí========== -->
 	<section class="counter">
 		<div class="container">
 			<div class="counter__area">
@@ -215,10 +215,10 @@
 			</div>
 		</div>
 	</section>
-	<!-- ===========counter Section Ends Here========== -->
+	<!-- ===========La sección del contador termina aquí========== -->
 
 
-	<!-- ===========Collection Section Start Here========== -->
+	<!-- ===========La sección de colecciones comienza aquí========== -->
 	<section class="collection-section padding-top padding-bottom">
 		<div class="container">
 			<div class="section-header">
@@ -269,10 +269,11 @@
 			</div>
 		</div>
 	</section>
-	<!-- ===========Collection Section Ends Here========== -->
+	<!-- ===========La sección de colecciones termina aquí========== -->
 
 
-	<!-- ===========Jaqport Section Ends Here========== -->
+
+	<!-- ===========La sección de Jaqport empieza aquí========== -->
 	<div class="jaqport padding-top padding-bottom" style="background-image: url(assets/images/jaqport/jaqport-bg.jpg);">
 		<div class="container">
 			<div class="section-header">
@@ -569,10 +570,10 @@
 			</div>
 		</div>
 	</div>
-	<!-- ===========Jaqport Section Ends Here========== -->
+	<!-- ===========La sección de Jaqport termina aquí========== -->
 
 
-	<!-- ===========Collection Section Start Here========== -->
+	<!-- ===========La sección de colecciones comienza aquí========== -->
 	<section class="collection-section padding-top padding-bottom">
 		<div class="container">
 			<div class="section-header">
@@ -637,10 +638,10 @@
 			</div>
 		</div>
 	</section>
-	<!-- ===========Collection Section Ends Here========== -->
+	<!-- ===========La sección de colecciones termina aquí========== -->
 
 
-	<!-- ===========Game Section Ends Here========== -->
+	<!-- ===========La sección de juegos empieza aquí========== -->
     <div class="game-section padding-top padding-bottom overflow-hidden" style="background-image:url(assets/images/match/bg.jpg)">
         <div class="container">
 			<div class="section-header">
@@ -733,11 +734,11 @@
 			</div>
         </div>
     </div>
-	<!-- ===========Game Section Ends Here========== -->
+	<!-- ===========La sección de juegos termina aquí========== -->
 
 
 
-	<!-- faq section start here -->
+	<!-- ===========La sección de preguntas frecuentes comienza aquí========== -->
 	<section class="faq padding-top padding-bottom">
 		<div class="container">
 			<div class="row justify-content-center flex-row-reverse">
@@ -815,11 +816,11 @@
 			</div>
 		</div>
 	</section>
-	<!-- faq section ending here -->
+	<!-- ===========La sección de preguntas frecuentes termina aquí========== -->
 
 
 
-	<!-- ===========Game Section Ends Here========== -->
+	<!-- ===========La sección de juegos empieza aquí========== -->
     <div class="game game-style3 overflow-hidden" style="background-image:url(assets/images/game/bg.jpg)">
         <div class="container">
             <div class="section-wrapper">
@@ -842,10 +843,10 @@
 			</div>
         </div>
     </div>
-	<!-- ===========Game Section Ends Here========== -->
+	<!-- ===========La sección de juegos termina aquí========== -->
 
 
-	<!-- ===========Testimonial Section Start Here========== -->
+	<!-- ===========La sección de testimonios comienza aquí========== -->
 	<div class="testimonial padding-top padding-bottom" style="background-image:url(assets/images/testimonial/bg.png)">
 		<div class="container">
 			<div class="section-header">
@@ -933,11 +934,11 @@
 			</div>
 		</div>
 	</div>
-	<!-- ===========Testimonial Section Ends Here========== -->
+	<!-- ===========La sección de testimonios termina aquí========== -->
 
 
 
-	<!-- ================ footer Section start Here =============== -->
+	<!-- ================ La sección de pie de página comienza aquí =============== -->
     <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
         <div class="footer-top">
             <div class="container">
@@ -1102,7 +1103,7 @@
             </div>
         </div>
     </footer>
-    <!-- ================ footer Section end Here =============== -->
+    <!-- ================ La sección de pie de página termina aquí =============== -->
 
 
 
@@ -1110,8 +1111,8 @@
 
 
 
-	<!-- All Needed JS -->
-	<script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
+	<!-- Todos los JS necesarios -->
+	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
 	<script src="assets/js/isotope.pkgd.min.js"></script>
@@ -1119,14 +1120,14 @@
 	<script src="assets/js/lightcase.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/viewport.jquery.js"></script>
 	<script src="assets/js/odometer.min.js"></script>
 	<script src="assets/js/main.js"></script>
 
 
-	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+	<!-- Google Analytics: cambia UA-XXXXX-Y por el ID de tu sitio. -->
 	<script>
 		window.ga = function () {
 			ga.q.push(arguments)
@@ -1145,5 +1146,5 @@
 </body>
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:10 GMT -->
+<!-- Copia reflejada de demos.codexcoder.com/themeforest/html/casina/casina/ por HTTrack Website Copier/3.x [XR&CO'2014], lunes, 03 de febrero de 2025 19:33:10 GMT -->
 </html>
