--- a/blog-single.html
+++ b/blog-single.html
@@ -2,29 +2,29 @@
 <html class="no-js" lang="en">
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/blog-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:32 GMT -->
+<!-- Copia de demos.codexcoder.com/themeforest/html/casina/casina/blog-single.html realizada por HTTrack Website Copier/3.x [XR&CO'2014], lunes, 03 de febrero de 2025 19:33:32 GMT -->
 <head>
 	<meta charset="utf-8">
 	<title>Casina Blog</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- site favicon -->
+	<!-- sitio favicon -->
 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
-	<!-- Place favicon.ico in the root directory -->
+	<!-- Coloca favicon.ico en el directorio raíz -->
 
-	<!-- All stylesheet and icons css  -->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<!-- Todos los archivos CSS de estilos y de iconos -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="assets/css/icofont.min.css">
 	<link rel="stylesheet" href="assets/css/swiper.min.css">
 	<link rel="stylesheet" href="assets/css/lightcase.css">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.min.css">
 
 </head>
 
 <body>
-	<!-- preloader start here -->
+	<!-- Inicio del preloader aquí -->
     <div class="preloader">
         <div class="preloader-inner">
             <div class="preloader-icon">
@@ -33,22 +33,22 @@
             </div>
         </div>
     </div>
-	<!-- preloader ending here -->
+	<<!-- Fin del preloader aquí -->
 
-	<!-- scrollToTop start here -->
+	<!-- Inicio de scrollToTop aquí -->
     <a href="#" class="scrollToTop"><i class="icofont-rounded-up"></i></a>
-    <!-- scrollToTop ending here -->
+    <!-- Fin de scrollToTop aquí -->
 
-	<!-- ==========shape image Starts Here========== -->
+	<!-- ==========Inicio de la imagen con forma========== -->
 	<div class="body-shape">
 		<img src="assets/images/shape/body-shape.png" alt="shape">
 	</div>
-	<!-- ==========shape image end Here========== -->
+	<!-- ==========Fin de la imagen con forma========== -->
 
 
 
 
-	<!-- ==========Header Section Starts Here========== -->
+	<!-- ==========Inicio de la sección de encabezado========== -->
 	<header class="header-section">
 		<div class="container">
 			<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
@@ -152,7 +152,7 @@
 								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
 								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
 
-								<!-- toggle icons -->
+								<!-- iconos de alternancia -->
 								<div class="header-bar d-lg-none">
 									<span></span>
 									<span></span>
@@ -169,11 +169,11 @@
 		</div>
 
 	</header>
-	<!-- ==========Header Section Ends Here========== -->
+	<!-- ==========Fin de la sección de encabezado========== -->
 
 
 
-	<!-- ===========Banner Section start Here========== -->
+	<!-- ===========Inicio de la sección de banner aquí========== -->
 	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/bg.jpg);">
 		<div class="container">
             <div class="section-wrapper text-center text-uppercase">
@@ -187,11 +187,11 @@
             </div>
 		</div>
 	</section>
-	<!-- ===========Banner Section Ends Here========== -->
+	<!-- ===========Fin de la sección de banner aquí========== -->
 
     
 
-	<!-- ===========Blog Section Start Here========== -->
+	<!-- ===========Inicio de la sección de blog aquí========== -->
 	<div class="blog-section blog-single padding-top padding-bottom aside-bg">
 		<div class="container">
 			<div class="section-wrapper">
@@ -522,11 +522,11 @@
 			</div>
 		</div>
 	</div>
-	<!-- ===========Blog Section Ends Here========== -->
+	<!-- ===========Fin de la sección de blog aquí========== -->
 
 
 
-	<!-- ================ footer Section start Here =============== -->
+	<!-- ================Inicio de la sección de pie de página =============== -->
     <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
         <div class="footer-top">
             <div class="container">
@@ -691,7 +691,7 @@
             </div>
         </div>
     </footer>
-    <!-- ================ footer Section end Here =============== -->
+    <!-- ================Fin de la sección de pie de página =============== -->
 
 
 
@@ -699,8 +699,8 @@
 
 
 
-	<!-- All Needed JS -->
-	<script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
+	<!-- Todos los JS necesarios -->
+	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
 	<script src="assets/js/isotope.pkgd.min.js"></script>
@@ -708,12 +708,12 @@
 	<script src="assets/js/lightcase.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/main.js"></script>
 
 
-	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+	<!-- Google Analytics: cambia UA-XXXXX-Y por el ID de tu sitio. -->
 	<script>
 		window.ga = function () {
 			ga.q.push(arguments)
@@ -732,5 +732,5 @@
 </body>
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/blog-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:34 GMT -->
+<!-- Copia de demos.codexcoder.com/themeforest/html/casina/casina/blog-single.html realizada por HTTrack Website Copier/3.x [XR&CO'2014], lunes, 03 de febrero de 2025 19:33:34 GMT -->
 </html>
