--- a/jaqpot.html
+++ b/jaqpot.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 
 
-<!-- Mirrored from demos.codexcoder.com/themeforest/html/casina/casina/jaqpot.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:16 GMT -->
+<!--  from demos.codexcoder.com/themeforest/html/casina/casina/jaqpot.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 03 Feb 2025 19:33:16 GMT -->
 <head>
 	<meta charset="utf-8">
 	<title>Casina Gallery</title>
