--- a/404.html
+++ b/404.html
@@ -387,7 +387,7 @@
 	<script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
 	<script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
 	<script src="assets/js/circularProgressBar.min.js"></script>
-	<script src="assets/js/isotope.pkgd.min.js"></script>
+	<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 	<script src="assets/js/swiper.min.js"></script>
 	<script src="assets/js/lightcase.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
